# spandsp-0.0.6

./: Makefile.am  build4UCM.sh  configure.ac
Decoder/: Makefile.am
Decoder/include/: callerid-spandsp.h  decoder-spandsp.h  fax-spandsp.h
Decoder/src/: Decoder.cpp  callerid-spandsp.cpp  decoder-spandsp.cpp  fax-spandsp.cpp
src/: logging.c
src/spandsp/: logging.h
